zellij-server/src/panes/unit/snapshots/zellij_server__panes__grid__grid_tests__alternate_screen_change_size.snap
---
source: zellij-server/src/panes/./unit/grid_tests.rs
expression: "format!(\"{:?}\", grid)"

---
00 (C): line12aaaa
01 (C): line13aaaa
02 (C): line14aaaa
03 (C): line15aaaa
04 (C): line16aaaa
05 (C): line17aaaa
06 (C): line18aaaa
07 (C): line19aaaa
08 (C): line20aaaa
09 (C): line21🦀🦀

