zellij-server/src/panes/unit/snapshots/zellij_server__panes__grid__grid_tests__ansi_csi_at_sign.snap
---
source: zellij-server/src/panes/./unit/grid_tests.rs
assertion_line: 1810
expression: "format!(\"{:?}\", grid)"
---
00 (C): f  oo

