zellij-server/src/panes/unit/snapshots/zellij_server__panes__grid__grid_tests__bash_delete_wide_characters.snap
---
source: zellij-server/src/panes/./unit/grid_tests.rs
assertion_line: 1386
expression: "format!(\"{:?}\", grid)"
---
00 (C): Welcome to fish, the friendly interactive shell                                                         
01 (C): ⋊> ~/c/zellij on wide-char ⨯ bash                                                               15:35:20
02 (C): [aram@green zellij]$ ＨＨＨＨＨＨ                                                                       
03 (C): 
04 (C): 
05 (C): 
06 (C): 
07 (C): 
08 (C): 
09 (C): 
10 (C): 
11 (C): 
12 (C): 
13 (C): 
14 (C): 
15 (C): 
16 (C): 
17 (C): 
18 (C): 
19 (C): 
20 (C):
