zellij-server/src/panes/unit/snapshots/zellij_server__panes__grid__grid_tests__clear_scroll_region.snap
---
source: zellij-server/src/panes/./unit/grid_tests.rs
expression: "format!(\"{:?}\", grid)"

---
00 (C): Welcome to fish, the friendly interactive shell
01 (C): ⋊> ~/c/mosaic on main ⨯ vim some-file                                                                       15:07:22
02 (C): ⋊> ~/c/mosaic on main ⨯                                                                                     15:07:29

